--- a/src/Pages/ProductPage/style.scss
+++ b/src/Pages/ProductPage/style.scss
@@ -1,7 +1,9 @@
 .productPage {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 16px;
-    @media screen and (max-width: 769px) {
+    @media screen and (max-width: 768px) {
         flex-direction: column;
     }
 }
