--- a/src/Pages/ProductPage/style.scss
+++ b/src/Pages/ProductPage/style.scss
@@ -1,6 +1,6 @@
 .productPage {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
     gap: 16px;
