--- a/src/Pages/ProductPage/ProductInfo/style.scss
+++ b/src/Pages/ProductPage/ProductInfo/style.scss
@@ -1,4 +1,6 @@
 .productInfo {
+    display: flex;
+    flex-direction: column;
     &__code {
         //styleName: Large heading 38/bold;
         font-family: Roboto;
@@ -21,6 +23,10 @@
 
     &__features {
         //styleName: Subheading 16/regular;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        list-style-image: url('../../../Assets/Icons/ellipse.png');
         font-family: Roboto;
         font-size: 16px;
         font-weight: 400;
