--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -1,49 +1,74 @@
-.subtitle {
-    color: var(--secondary-color-1, #595959);
-    /* Body 14/regular */
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px; /* 157.143% */
-}
+@import '../../variables.scss';
 
 header {
+width: 100%;
+padding: 17px 0;
 box-shadow: 0px 16px 20px 0px rgba(0, 0, 0, 0.02);
 }
+
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: #FFF;
-    /* header shadow */
-    padding: 16px 0 16px 0;
-
     &__block {
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 16px;
     }
-
     &__block1 {
+        gap: 16px;
         &_language, &_currency {
-            @media (max-width: 768px){
+            display: flex;
+            gap: 4px;
+            @media (max-width: $tablet){
                 display: none;
             }
         }
     }
-
     &__block2 {
-        @media (max-width: 768px){
+        &_item {
+            padding: 5px 16px;
+            &_title {
+            color: var(--secondary-color-1, #595959);
+            /* Body 14/regular */
+            font-family: Roboto;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px; /* 157.143% */
+            }
+          }
+        @media (max-width: $tablet){
             display: none;
         }
     }
-
     &__block3 {
-        &_hamburgerMenu {@media (min-width: 769px){
+        gap: 8px;
+        &_signin {
+            display: flex;
+            gap: 4px;
+            color: var(--secondary-color-1, #595959);
+            /* Body 14/regular */
+            font-family: Roboto;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px; /* 157.143% */
+            @media (max-width: $tablet){
+                display: none;
+            };
+        };
+
+        &_hamburgerMenu {
+            @media (min-width: $tablet){
             display: none;
-        }
+        };
     }
+        &_wishList {
+            @media (max-width: $tablet) {
+                display: none;
+            };
+        };
     }
 }
