--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,42 @@
+@import "./variables.scss";
+
 @font-face {
   font-family: "Roboto";
-  src: url("./Assets/Fonts/Roboto-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto Medium";
+  src: url("./assets/fonts/Roboto-Medium.ttf") format("truetype");
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+}
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+input, button, textarea, select {
+  font: inherit;
+}
+p, h1, h2, h3, h4, h5, h6, span {
+  overflow-wrap: break-word;
+}
+#root, #__next {
+  isolation: isolate;
 }
 
 .container {
   margin: 0 auto;
   width: 100%; 
-  max-width: 1390px;
+  max-width: 1440px;
+  padding: 0 24px;
 }
