--- a/src/Pages/ProductPage/ProductInfo/style.scss
+++ b/src/Pages/ProductPage/ProductInfo/style.scss
@@ -26,7 +26,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
-        list-style-image: url('../../../Assets/Icons/ellipse.png');
+        list-style-image: url('../../../assets/icons/ellipse.svg');
         font-family: Roboto;
         font-size: 16px;
         font-weight: 400;
