--- a/src/Pages/ProductPage/style.scss
+++ b/src/Pages/ProductPage/style.scss
@@ -1,11 +1,13 @@
 .productPage {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-content: center;
+    display: flex;
     gap: 16px;
     @media screen and (max-width: 768px) {
-        grid-template-columns: 100%;
+        flex-direction: column;
 
+    }
+    &__details{
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
     }
 }
