--- a/src/Pages/ProductPage/ProductInfo/style.scss
+++ b/src/Pages/ProductPage/ProductInfo/style.scss
@@ -1,47 +1,44 @@
 .productInfo {
+    gap: 16px;
     display: flex;
     flex-direction: column;
     &__code {
-        //styleName: Large heading 38/bold;
-        font-family: Roboto;
+        text-align: left;
         font-size: 38px;
         font-weight: 500;
         line-height: 46px;
+        font-family: Roboto;
         letter-spacing: 0em;
-        text-align: left;
     }
 
     &__about {
-        //styleName: Subheading 16/regular;
-        font-family: Roboto;
         font-size: 16px;
         font-weight: 400;
-        line-height: 24px;
-        letter-spacing: 0em;
         text-align: left;
+        line-height: 24px;
+        font-family: Roboto;
+        letter-spacing: 0em;
     }
 
     &__features {
-        //styleName: Subheading 16/regular;
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        list-style-image: url('../../../assets/icons/ellipse.svg');
-        font-family: Roboto;
+        display: grid;
         font-size: 16px;
         font-weight: 400;
+        text-align: left;
         line-height: 24px;
         letter-spacing: 0em;
-        text-align: left;
+        font-family: Roboto;
+        grid-template-columns: 50% 50%;
+        gap: 16px;
+        list-style-image: url('../../../assets/icons/ellipse.svg');
     }
 
     &__price {
-        //styleName: Large heading 30/bold;
-        font-family: Roboto;
         font-size: 30px;
         font-weight: 500;
         line-height: 38px;
         letter-spacing: 0em;
+        font-family: Roboto;
         text-align: left;
     }
 
