--- a/src/Pages/ProductPage/ProductPurchaseForm/style.scss
+++ b/src/Pages/ProductPage/ProductPurchaseForm/style.scss
@@ -7,8 +7,9 @@
     }
 
     &__color {
-        margin: 0px 0px 0px 0px;
-        padding: 0px 0px 0px 0px;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
         &_p{
             font-family: Roboto;
             font-size: 16px;
@@ -17,7 +18,8 @@
             letter-spacing: 0em;
             text-align: left;
         }
-
+        &_menu {
+            position: relative;
         &_dropdown {
             position: absolute;
         }
@@ -58,10 +60,11 @@
             }
     }
     }
+    }
     &__size {
-        margin: 0px 0px 0px 0px;
-        padding: 0px 0px 0px 0px;
-
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
         &_p{
             font-family: Roboto;
             font-size: 16px;
@@ -71,6 +74,7 @@
             text-align: left;
         }
 
+        &_menu {
         &_button{
             /* Subheading 16/regular */
             color: rgba(0, 0, 0, 0.65);
@@ -86,18 +90,6 @@
             width: 100%;
             max-width: 264px;
             text-align: left;
-        }
-
-        &_guideLink {
-            color: #1A1A1A;
-            /* Body 14/regular-underline */
-            font-family: Roboto;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 22px; /* 157.143% */
-            text-decoration-line: underline;
-            margin-top: 16px;
         }
 
         &_dropdown {
@@ -124,11 +116,23 @@
                 background-color: #D9D9D9;
             }
         }
+        }
+        &_guideLink {
+            color: #1A1A1A;
+            /* Body 14/regular-underline */
+            font-family: Roboto;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px; /* 157.143% */
+            text-decoration-line: underline;
+        }
 
     }
     &__quantity {
-        margin: 0px 0px 0px 0px;
-        padding: 0px 0px 0px 0px;
+   display: flex;
+   flex-direction: column;
+   gap: 16px;
         &_p{
             font-family: Roboto;
             font-size: 16px;
@@ -145,6 +149,9 @@
                 border: 1px solid #D9D9D9;
                 background: #FFF;
                 padding: 4px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
 
             &_value {
